added more visualization

--- a/compare_aligners.ipynb
+++ b/compare_aligners.ipynb
@@ -116,7 +116,7 @@
     "bin_precision_ngmlr, bin_id_ngmlr, s_ngmlr = precision_ins_size(ngmlr)\n",
     "\n",
     "\n",
-    "path = '/Users/c23125562/Library/CloudStorage/OneDrive-CardiffUniversity/split_reads/'\n",
+    "path = ''\n",
     "plt.plot(bin_id_bwa, bin_precision_bwa, label='bwa')\n",
     "plt.plot(bin_id_bwa_dodi, bin_precision_bwa_dodi, label='bwa+dodi')\n",
     "plt.plot(bin_id_minimap2, bin_precision_minimap2, label='minimap2')\n",
@@ -243,7 +243,7 @@
     "plt.ylabel('Precision')\n",
     "plt.ylim(0, 1.1)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(prefix + 'last_mapq_vs_precision.pdf')"
+    "plt.savefig(path + 'last_mapq_vs_precision.pdf')"
    ],
    "metadata": {
     "collapsed": false,
